--- a/du_an_HTML/products.html
+++ b/du_an_HTML/products.html
@@ -162,7 +162,7 @@
     <section class="feature-products">
       <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-xl-6">
             <div class="info">
               <h2>
                 Đũa thay đầu GreenChop - <br />
@@ -192,7 +192,7 @@
             <!-- end .info -->
           </div>
 
-          <div class="col-5">
+          <div class="col-12 col-xl-5">
             <div class="image">
               <img src="images/model-produc-img.png" alt="" />
             </div>
@@ -285,7 +285,7 @@
         <!-- end use-title -->
         <div class="step-use">
           <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-xl-3">
               <div class="step">
                 <div class="image">
                   <img src="images/steps/step-1.png" alt="" />
@@ -298,7 +298,7 @@
             </div>
             <!-- end col step-1 -->
 
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-xl-3">
               <div class="step">
                 <div class="image">
                   <img src="images/steps/step-2.png" alt="" />
@@ -311,7 +311,7 @@
             </div>
             <!-- end col step-2 -->
 
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-xl-3">
               <div class="step">
                 <div class="image">
                   <img src="images/steps/step-3.png" alt="" />
@@ -324,7 +324,7 @@
             </div>
             <!-- end col step-3 -->
 
-            <div class="col-3">
+            <div class="col-12 col-sm-6 col-xl-3">
               <div class="step">
                 <div class="image">
                   <img src="images/steps/step-4.png" alt="" />
