--- a/du_an_HTML/news.html
+++ b/du_an_HTML/news.html
@@ -21,5 +21,93 @@
       <h1>Tin tức</h1>
     </div>
     <!-- end .news-title -->
+
+    <div class="top-news">
+      <div class="container">
+        <div class="cover">
+          <div class="col-6">
+            <div class="image">
+              <img src="images/top-news/top-new-1-img.png" alt="" />
+            </div>
+            <!-- end image -->
+            <div class="info">
+              <p>Tin nổi bật</p>
+              <h3>
+                Exerci tation ullamcer suscipit <br />
+                m zril delenit augue
+              </h3>
+              <p>
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer
+                adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat.
+              </p>
+            </div>
+            <!-- end info -->
+
+            <div class="more-new">
+              <a href="#" class="btn btn-outline-primary"
+                ><span>Xem thêm</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                >
+                  <path
+                    d="M12.4025 18.1597L11.0268 16.786L15.499 12.3138L11.0268 7.84155L12.4025 6.47363L18.2456 12.3167L12.4035 18.1597H12.4025ZM7.1282 18.1597L5.75348 16.786L10.2257 12.3138L5.75348 7.84836L7.1282 6.47363L12.9722 12.3167L7.12917 18.1597H7.1282Z"
+                    fill="#2C2C2C"
+                  />
+                </svg>
+              </a>
+            </div>
+            <!-- end more-new -->
+          </div>
+          <!-- end col -->
+
+          <div class="col-6">
+            <div class="image">
+              <img src="images/top-news/top-new-1-img.png" alt="" />
+            </div>
+            <!-- end image -->
+            <div class="info">
+              <p>Tin nổi bật</p>
+              <h3>
+                Exerci tation ullamcer suscipit <br />
+                m zril delenit augue
+              </h3>
+              <p>
+                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex
+                ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer
+                adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat volutpat.
+              </p>
+            </div>
+            <!-- end info -->
+
+            <div class="more-new">
+              <a href="#" class="btn btn-outline-primary"
+                ><span>Xem thêm</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                >
+                  <path
+                    d="M12.4025 18.1597L11.0268 16.786L15.499 12.3138L11.0268 7.84155L12.4025 6.47363L18.2456 12.3167L12.4035 18.1597H12.4025ZM7.1282 18.1597L5.75348 16.786L10.2257 12.3138L5.75348 7.84836L7.1282 6.47363L12.9722 12.3167L7.12917 18.1597H7.1282Z"
+                    fill="#2C2C2C"
+                  />
+                </svg>
+              </a>
+            </div>
+            <!-- end more-new -->
+          </div>
+          <!-- end col -->
+        </div>
+      </div>
+    </div>
   </body>
 </html>
