--- a/du_an_HTML/greenchop.html
+++ b/du_an_HTML/greenchop.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Greenchop</title>
   </head>
-  <body>
+  <body class="page">
     <div class="greenchop-title">
       <h1>Về Greenchop</h1>
     </div>
