--- a/du_an_HTML/news.html
+++ b/du_an_HTML/news.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Tin tức</title>
   </head>
-  <body>
+  <body class="page">
     <div class="news-title">
       <h1>Tin tức</h1>
     </div>
