--- a/du_an_HTML/products.html
+++ b/du_an_HTML/products.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Sản phẩm</title>
   </head>
-  <body>
+  <body class="page">
     <div class="products-title">
       <h1>Sản phẩm</h1>
     </div>
