--- a/du_an_HTML/home.html
+++ b/du_an_HTML/home.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
-  <body>
+  <body class="page">
     <div class="home">
       <section class="hero">
         <div class="container">
