--- a/du_an_HTML/index.html
+++ b/du_an_HTML/index.html
@@ -476,7 +476,7 @@
           <!-- end posts-list -->
 
           <div class="posts-more">
-            <a href="#" class="btn btn-outline-primary"
+            <a href="news.html" class="btn btn-outline-primary"
               ><span>Xem thêm</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
